Actions
Bug #19349
closedKernel.Integer silently discards base argument that does not have a #to_int
Bug #19349:
Kernel.Integer silently discards base argument that does not have a #to_int
Status:
Closed
Assignee:
-
Target version:
-
ruby -v:
ruby 3.1.2p20 (2022-04-12 revision 4491bb740a) [x86_64-linux-gnu]
Description
The method Kernel.Integer has an optional argument base, which is the base to convert the input to:
If the base argument is not an integer, it is converted using #to_int
irb(main):002:0> Kernel.Integer('10', 8.2)
=> 8
irb(main):003:0> Kernel.Integer('10', Object.new.tap { |x| x.define_singleton_method(:to_int) { 8 } })
=> 8
But if the base argument is not an Integer, and does not have a #to_int method, it gets discarded
I would expect this to raise a TypeError, similar to String#to_i:
irb(main):005:0> '10'.to_i('8')
(irb):5:in `to_i': no implicit conversion of String into Integer (TypeError)
This has briefly been discussed on the ruby-spec github repo, and they suggested to report this as a bug. (see https://github.com/ruby/spec/pull/997#issuecomment-1382825900)
Actions