[Bug #19349] Respect `#to_int` of `base` argument